--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,22 @@
-<p class="">restaurants#show</p>
-
-<%= link_to "Go home", restaurants_path %>
+<div class="container d-flex flex-column">
+  <h3>
+  <%= @restaurant.name.chomp(".") %>
+  </h3>
+  <ul class="list-group mb-3">
+    <li class="list-group-item">
+      <strong>Find us here: </strong>
+      <%= @restaurant.address %>
+    </li>
+    <li class="list-group-item">
+      <strong>Category: </strong>
+      <%= @restaurant.category %>
+    </li>
+    <li class="list-group-item">
+      <strong>Contact: </strong>
+      <%= @restaurant.phone_number %>
+    </li>
+  </ul>
+  <div>
+    <%= link_to "Go home", restaurants_path, class: "btn btn-primary"%>
+  </div>
+</div>
