Refactor reviews_controller and show

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,10 +1,10 @@
-<p class="">restaurants#new</p>
-
-<%= simple_form_for [@restaurant, @review] do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :category %>
-  <%= f.input :phone_number %>
-<% end %>
-
-<%= link_to "Go home", restaurants_path %>
+<div class="container">
+  <% restaurants = ["chinese", "italian", "japanese", "french", "belgian"] %>
+  <%= simple_form_for @restaurant do |f| %>
+    <%= f.input :name, label: "Enter restaurant name: " %>
+    <%= f.input :address, label: "Where is the restaurant?" %>
+    <%= f.input :category, collection: restaurants, label: "What kind of restaurant? Choose one: #{restaurants.each { |r| r.capitalize }}" %>
+    <%= f.input :phone_number, label: "Phone number: " %>
+    <%= f.button :submit, class: "btn btn-primary mb-3" %>
+  <% end %>
+</div>
